# gecko-client

./: Cargo.toml  Dockerfile  README.md  example.env
.github/workflows/: publish-ghcr.yaml
src/: main.rs
src/database/: database.rs
src/tasks/: data_collection.rs  mod.rs
src/utils/: spawn_task.rs
