[package]
name = "gecko-client"
version = "0.1.0"
edition = "2021"

[dependencies]
dht-sensor = "0.2.1"
dotenv = "0.15.0"
rppal = "0.18.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
