[package]
name = "gecko-client"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal-dht11 = "0.3.1"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rppal = "0.18.0"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
