[package]
name = "gecko-client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dht11_gpio = "0.1.0"
dotenv = "0.15.0"
serde = "1.0.203"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
